--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "express": "^4.18.1",
     "json-server": "^0.17.0",
     "nodemon": "^2.0.18",
+    "prop-types": "^15.8.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
